// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGoupEmail Snapshot capturing Snapshot of FormGroupEmail with email 1`] = `
<div
  className="form-group"
>
  <label
    className=""
    htmlFor="email"
  >
    le super label
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control "
      id="email"
      name="email"
      onChange={[Function]}
      required={true}
      type="email"
      value="bob@bob.com"
    />
    <div
      className="input-group-append"
    >
      <span
        className="input-group-text"
      >
        <span>
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check fa-w-16 "
            color="green"
            data-icon="check"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="invalid-feedback"
    >
      Cet email est déjà utilisé
    </div>
  </div>
</div>
`;

exports[`FormGroupEmail Snapshot capturing Snapshot of FormGroupEmail 1`] = `
<div
  className="form-group"
>
  <label
    className=""
    htmlFor="email"
  >
    le super label
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control "
      id="email"
      name="email"
      onChange={[Function]}
      required={true}
      type="email"
      value=""
    />
    
    <div
      className="invalid-feedback"
    >
      Cet email est déjà utilisé
    </div>
  </div>
</div>
`;
